--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/images/favicon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Chalkboard+SE&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Battleship</title>
   </head>
